--- a/stats/2023-05-24-bilan-2021.qmd
+++ b/stats/2023-05-24-bilan-2021.qmd
@@ -68,8 +68,7 @@ campagnes = {
 # conn = psycopg2.connect(host=os.getenv('DB_HOST'), dbname=os.getenv('DB_NAME'), user=os.getenv('DB_USER'), password=os.getenv('DB_PASSWORD'), sslmode="require")
 # conn.set_session(readonly=True)
 # cur = conn.cursor()
-year = '2022'
-url = f"https://ma-cantine-metabase.cleverapps.io/api/card/{campagnes[year]['card']}/query/json"
+url = f"https://ma-cantine-metabase.cleverapps.io/api/card/802/query/json"
 load_dotenv()
 header = {
     "Content-Type": "application/json",
@@ -86,11 +85,11 @@ td_raw["declared_data"] = td_raw["declared_data"].apply(json.loads)
 td_json = pd.json_normalize(td_raw["declared_data"])
 td_raw = pd.concat([td_raw.drop("declared_data", axis=1), td_json], axis=1)
 
-if year == '2021':
-    col_to_rename = {}
-    for col in ['production_type', 'management_type', 'yearly_meal_count', 'daily_meal_count']:
-        col_to_rename[col] = f"canteen.{col}"
-    td_raw = td_raw.rename(columns=col_to_rename)
+# if year == '2021':
+#     col_to_rename = {}
+#     for col in ['production_type', 'management_type', 'yearly_meal_count', 'daily_meal_count']:
+#         col_to_rename[col] = f"canteen.{col}"
+#     td_raw = td_raw.rename(columns=col_to_rename)
 ```
 
 Les données sont extraites de la base de données de ma-cantine. Plusieurs filtres sont appliqués :
@@ -99,6 +98,29 @@ Les données sont extraites de la base de données de ma-cantine. Plusieurs filt
 2. statut : la télédéclaration doit avoir été validée par son éditeur. `status="SUBMITTED"`
 3. année 2022 : `year==2022`
 4. canteen ID qui sont renseignés (champs non nuls) : `canteen_id.notnull()`
+
+```{python Ajout des données cantines pour les td de la campagne 2022}
+def add_canteen_info(df):
+
+    url = f"https://ma-cantine-metabase.cleverapps.io/api/card/820/query/json"
+    res = requests.post(
+        url,
+        headers= {
+        "Content-Type": "application/json",
+        "X-Metabase-Session": os.environ.get('METABASE_TOKEN'),
+    }
+    )
+    td_canteen = pd.DataFrame(res.json())
+    
+    col_to_rename={}
+    for col in ['production_type', 'management_type', 'yearly_meal_count', 'daily_meal_count']:
+        del df[f"canteen.{col}"]
+        col_to_rename[f"{col}"] = f"canteen.{col}"
+    td_canteen = td_canteen.rename(columns=col_to_rename)
+
+    df = df.merge(right=td_canteen, left_on='canteen_id', right_on='id')
+    return df
+```
 
 ```{python Nettoyage des données}
 td = td_raw.copy()
@@ -109,7 +131,12 @@ for year in campagnes.keys():
     tds[year] = td.copy()
     tds[year] = tds[year][tds[year].year==int(year)]
     tds[year] = tds[year][(tds[year]['creation_date'] >= campagnes[year]["start_date"]) & (tds[year]['creation_date'] <= campagnes[year]["end_date"])]
+
+tds['2021'] = add_canteen_info(tds['2021'])
+
 ```
+
+
 
 # Nettoyage et formattage des données
 Comparaison de la dynamique de télédéclarations lors des deux dernières campagnes. 
@@ -139,66 +166,65 @@ plt.show()
 ```
 
 
-# Vérifications de la qualité des données
 ```{python Vérification des données}
-td.groupby("canteen_id").size().sort_values(ascending=False).head(10)
-td = td[td.id != 10871] # Doublon inexpliqué entre les id 10871 et 10870
+#| echo: false
+for year in tds.keys():
+    assert tds[year].groupby("canteen_id").size().sort_values(ascending=False).head(1).iloc[0] == 1, "Il y a des doublons de canteen_id"
+    assert tds[year]["canteen_id"].isna().sum() == 0, "Il y a des cantines sans identifiant"
+    assert len(tds[year]["canteen_id"]) == len(tds[year]["canteen_id"].unique()), "Il y a des doublons dans les cantines"
 ```
 
-```{python Vérification des données}
-# assert td["canteen_id"].isna().sum() == 0, "Il y a des cantines sans identifiant"
-# assert len(td["canteen_id"]) == len(td["canteen_id"].unique()), "Il y a des doublons dans les cantines"
-# for col in td.columns:
-#     print(col)
-```
+# Traitement des valeurs manquantes
+Nous remplaçons les valeurs manquantes par la valeur 0.
+```{python Basic}
 
-# Comparaison avec les données du rapport
-<!-- ```{python Verification des valeurs en recréant l'erreur}
-td_to_keep = pd.read_csv('stats/canteen_id_rapport.csv')
-td = td[td['canteen_id'].isin(td_to_keep['canteen_id'])]
-``` -->
+for year in ['2021', '2022']:
+    print(tds[year].describe())
+    tds[year] = tds[year].fillna(0)
+```
 
 # Chiffres clés
-```{python Nombre de Télédéclarations}
-indicateurs = {}
-indicateurs["Nombre de Télédéclarations"] = len(td)
-```
 
-Dans les télédéclarations pour la campagne 2022, il n'y a pas d'indication du nombre de satellites, du managment_type et du produciton_type.
+Dans les télédéclarations pour la campagne 2022, il n'y a pas d'indication du nombre de satellites, du managment_type et du production_type.
 
-Les informations suivanted proviennent donc des informations renseignées pour les cantines. Les données ont peut-être légérement été modifié depuis la télédéclaration.
+Les informations suivantes proviennent donc des informations renseignées pour les cantines. Les données ont peut-être légérement été modifié depuis la télédéclaration.
 
 ```{python Nombre de sites de restauration concernés par la télédéclaration}
-indicateurs["Nombre de sites de restauration concernés par la télédéclaration"] = (
-    len(td) + td["satellite_canteens_count"].sum()
-)
-cuisines_sur_place = td[td["canteen.production_type"].isin(["site", "site_cooked_elsewhere"])]
-indicateurs["Nombre de cantines sur place (sites et satellites)"] = len(cuisines_sur_place)
+indicateurs = {}
+for year in ['2021', '2022']:
+    print(year)
+    indicateurs[year] = {}
+    indicateurs[year]["Nombre de Télédéclarations"] = len(tds[year])
+    indicateurs[year]["Nombre de sites de restauration concernés par la télédéclaration"] = (
+        len(tds[year]) + tds[year]["satellite_canteens_count"].sum()
+    )
+    cuisines_sur_place = tds[year][tds[year]["canteen.production_type"].isin(["site", "site_cooked_elsewhere"])]
+    indicateurs[year]["Nombre de cantines sur place (sites et satellites)"] = len(cuisines_sur_place)
 
-cuisines_centrales = td[td["canteen.production_type"].isin(["central_serving", "central"])]
-indicateurs["Nombre de cantines centrales"] = len(cuisines_centrales)
+    cuisines_centrales = tds[year][tds[year]["canteen.production_type"].isin(["central_serving", "central"])]
 
-indicateurs["Nombre de repas moyens par jour pour les cantines sur place"] = int(
-    cuisines_sur_place["canteen.daily_meal_count"].mean()
-)
-indicateurs["Nombre de repas moyens par jour pour les cantines centrales"] = int(
-    cuisines_centrales["canteen.daily_meal_count"].mean()
-)
-indicateurs["Nombre de repas totaux pour l'année"] = int(td["canteen.yearly_meal_count"].sum())
+    indicateurs[year]["Nombre de repas moyens par jour pour les cantines sur place"] = int(
+        cuisines_sur_place["canteen.daily_meal_count"].mean()
+    )
+    indicateurs[year]["Nombre de repas moyens par jour pour les cantines centrales"] = int(
+        cuisines_centrales["canteen.daily_meal_count"].mean()
+    )
+    indicateurs[year]["Nombre de repas totaux pour l'année"] = int(tds[year]["canteen.yearly_meal_count"].sum())
 
-indicateurs["Répartition du nombre de cantines en gestion directe"] = f"{100 * len(td[td['canteen.management_type'] == 'direct']) / len(td):.2f} %"
-indicateurs[
-    "Répartition du nombre de cantines en gestion concédée"
-] = f"{100 * len(td[td['canteen.management_type'] == 'conceded']) / len(td):.2f} %"
-indicateurs[
-    "Répartition du nombre de cantines en gestion non renseignée"
-] = f"{100 * len(td[~td['canteen.management_type'].isin(['direct', 'conceded'])]) / len(td):.2f} %"
+    indicateurs[year]["Répartition du nombre de cantines en gestion directe"] = f"{100 * len(tds[year][tds[year]['canteen.management_type'] == 'direct']) / len(tds[year]):.2f} %"
+    indicateurs[year][
+        "Répartition du nombre de cantines en gestion concédée"
+    ] = f"{100 * len(tds[year][tds[year]['canteen.management_type'] == 'conceded']) / len(tds[year]):.2f} %"
+    indicateurs[year][
+        "Répartition du nombre de cantines en gestion non renseignée"
+    ] = f"{100 * len(tds[year][~tds[year]['canteen.management_type'].isin(['direct', 'conceded'])]) / len(tds[year]):.2f} %"
 ```
 
 
 Pour les montants, nous nous rebasons sur les données de TD.
 
 ```{python Montants d'achat alimentaires déclarés}
+
 indicateurs["Montants d'achat alimentaires déclarés"] = f"{int(td['teledeclaration.value_total_ht'].sum())} €"
 
 indicateurs[
@@ -216,13 +242,6 @@ for i in indicateurs:
 ```
 
 
-```{python Vérification de la non existence de TD tests}
-# import re
-
-# pattern = r"test|testing|sample|temp|debug|beta"
-# mask = td["name"].str.contains(pattern, flags=re.IGNORECASE, regex=True)
-# testing_elements = td[mask]
-```
 
 ```{python Vérification du taux de présence de la donnée repas par an}
 print(
