--- a/stats/2023-08-21-bilan-2022.qmd
+++ b/stats/2023-08-21-bilan-2022.qmd
@@ -35,7 +35,7 @@ En 2021, l'application ne permettait pas de spécifier le mode de télédéclara
 
 
 ```{python import}
-#| echo: false
+# | echo: false
 import pandas as pd
 import os
 import datetime
@@ -45,38 +45,61 @@ from dotenv import load_dotenv
 from ydata_profiling import ProfileReport
 import psycopg2
 import plotly.express as px
+import matplotlib.pyplot as plt
+from matplotlib import dates as mdates
+import locale
 
 ```
+
+
+
 ```{python Import des données des campagnes}
-#| echo: false
+# | echo: false
 campagnes = {
-  "2021": {"start_date": "2022-07-16", "end_date": "2022-12-05", "card": "795"},
-  "2022": {"start_date": "2023-02-13", "end_date": "2023-06-30", "card": "802"}
+    "2021": {"start_date": "2022-07-16", "end_date": "2022-12-05", "card": "795"},
+    "2022": {"start_date": "2023-02-13", "end_date": "2023-06-30", "card": "802"},
 }
+import os
+
+os.environ["TEST"] = "1"
+
+TEST = "test"
 
 ```
+
+...
+<details>
+<p>This is an HTML paragraph.</p>
+<ul>
+  <li>{r}campagnes{r}</li>
+  <li>Item 2</li>
+</ul>
+</details>
+...
 
 <!-- Afin de récupérer les données, il vous faut un TOKEN metabase :
 `curl -X POST -H "Content-Type: application/json" -d '{"username": <USERNAME>, "password": <PASSWORD>}' https://ma-cantine-metabase.cleverapps.io/api/session` -->
 
 
 ```{python Import des données TD}
-#| echo: false
+# | echo: false
 url = f"https://ma-cantine-metabase.cleverapps.io/api/card/802/query/json"
 load_dotenv()
 header = {
     "Content-Type": "application/json",
-    "X-Metabase-Session": os.environ.get('METABASE_TOKEN'),
+    "X-Metabase-Session": os.environ.get("METABASE_TOKEN"),
 }
 res = requests.post(
     url,
     headers=header,
 )
 td_raw = pd.DataFrame(res.json())
-del td_raw['year']
+del td_raw["year"]
 td_raw["declared_data"] = td_raw["declared_data"].apply(json.loads)
 td_json = pd.json_normalize(td_raw["declared_data"])
 td_raw = pd.concat([td_raw.drop("declared_data", axis=1), td_json], axis=1)
+
+
 ```
 
 Les données sont extraites de la base de données de ma-cantine. Plusieurs filtres sont appliqués :
@@ -90,42 +113,46 @@ Vous pouvez retrouver le code utilisé pour ces filtres ci dessous :
 
 ```{python Ajout des données cantines pour les td de la campagne 2022}
 def add_canteen_info(df):
-
     url = f"https://ma-cantine-metabase.cleverapps.io/api/card/820/query/json"
     res = requests.post(
         url,
-        headers= {
-        "Content-Type": "application/json",
-        "X-Metabase-Session": os.environ.get('METABASE_TOKEN'),
-    }
+        headers={
+            "Content-Type": "application/json",
+            "X-Metabase-Session": os.environ.get("METABASE_TOKEN"),
+        },
     )
     td_canteen = pd.DataFrame(res.json())
-    
-    col_to_rename={}
-    for col in ['production_type', 'management_type', 'yearly_meal_count', 'daily_meal_count']:
+
+    col_to_rename = {}
+    for col in ["production_type", "management_type", "yearly_meal_count", "daily_meal_count"]:
         del df[f"canteen.{col}"]
         col_to_rename[f"{col}"] = f"canteen.{col}"
     td_canteen = td_canteen.rename(columns=col_to_rename)
 
-    df = df.merge(right=td_canteen, left_on='canteen_id', right_on='id')
+    df = df.merge(right=td_canteen, left_on="canteen_id", right_on="id")
     return df
+
+
 ```
 
 ```{python Nettoyage des données}
 td = td_raw.copy()
-td = td[td.status == 'SUBMITTED']
+td = td[td.status == "SUBMITTED"]
 td = td[td.canteen_id.notnull()]
 tds = {}
 for year in campagnes.keys():
     tds[year] = td.copy()
-    tds[year] = tds[year][tds[year].year==int(year)]
-    tds[year]['creation_date'] = tds[year]['creation_date'].apply(lambda x: x.split('T')[0])
-    tds[year] = tds[year][(tds[year]['creation_date'] >= campagnes[year]["start_date"]) & (tds[year]['creation_date'] <= campagnes[year]["end_date"])]
+    tds[year] = tds[year][tds[year].year == int(year)]
+    tds[year]["creation_date"] = tds[year]["creation_date"].apply(lambda x: x.split("T")[0])
+    tds[year] = tds[year][
+        (tds[year]["creation_date"] >= campagnes[year]["start_date"])
+        & (tds[year]["creation_date"] <= campagnes[year]["end_date"])
+    ]
 
-tds['2021'] = add_canteen_info(tds['2021'])
+tds["2021"] = add_canteen_info(tds["2021"])
 
 for year in campagnes.keys():
-    tds[year].to_csv(f'export_dataset_stats_campagne_{year}.csv', sep=';', index=False)
+    tds[year].to_csv(f"export_dataset_stats_campagne_{year}.csv", sep=";", index=False)
 
 ```
 
@@ -133,22 +160,28 @@ for year in campagnes.keys():
 
 # Comparaison de la dynamique de télédéclarations lors des deux dernières campagnes. 
 ```{python Nettoyage des données}
-tds_ts =  {}
+
+tds_ts = {}
 for year in campagnes.keys():
     tds_ts[year] = tds[year].copy()
-    tds_ts[year]['creation_date'] = pd.to_datetime(tds_ts[year]['creation_date']).dt.strftime('%V')
-    tds_ts[year] = tds_ts[year].groupby('creation_date').count()
-    tds_ts[year] = tds_ts[year].rename(columns={'canteen_id': 'cmpt_td_2022'})
+    tds_ts[year]["creation_date"] = pd.to_datetime(tds_ts[year]["creation_date"])  # .dt.strftime('%V')
+    tds_ts[year] = tds_ts[year].groupby("creation_date").count()
+    tds_ts[year] = tds_ts[year].rename(columns={"canteen_id": "cmpt_td_2022"})
 
-import matplotlib.pyplot as plt
-# Plot the superposed time series
+locale.setlocale(locale.LC_TIME, "fr_FR.utf8")
+
 axe = 0
 fig, axes = plt.subplots(nrows=2, ncols=1, figsize=(8, 6))
 for year in tds_ts.keys():
+    axes[axe].plot(tds_ts[year].index, tds_ts[year]["cmpt_td_2022"])
+    # Set the x-axis tick locator and formatter
+    locator = mdates.MonthLocator()
+    formatter = mdates.DateFormatter("%b")  # %b for abbreviated month name
 
-    axes[axe].plot(tds_ts[year].index, tds_ts[year]['cmpt_td_2022'])
-    axes[axe].set_ylabel('Nombre de télédéclaration')
-    axes[axe].set_title(f'Nombre de télédéclaration par semaine (Année {year})')
+    axes[axe].xaxis.set_major_locator(locator)
+    axes[axe].xaxis.set_major_formatter(formatter)
+    axes[axe].set_ylabel("Nombre de télédéclaration")
+    axes[axe].set_title(f"Historique des télédeclarations de la campagne {int(year) -1} sur les données {year}")
     axes[axe].legend()
     axes[axe].grid(True)
     axe += 1
@@ -157,32 +190,67 @@ plt.tight_layout()
 plt.show()
 ```
 
+On observe plusieurs éléments : 
+
+* les durées sont similaires 
+* décalage de 6 mois entre les deux campagnes 
+* dans les deux cas, nous observons le phénomène de "la dernière minute" : forte augmentation du nombre télédéclaration avant la fin des échéances 
+* la deuxième campagne est plus régulière, avec l'observation d'une semaine type 
+
 
 ```{python Vérification des données}
-#| echo: false
+# | echo: false
 for year in tds.keys():
-    assert tds[year].groupby("canteen_id").size().sort_values(ascending=False).head(1).iloc[0] == 1, "Il y a des doublons de canteen_id"
+    assert (
+        tds[year].groupby("canteen_id").size().sort_values(ascending=False).head(1).iloc[0] == 1
+    ), "Il y a des doublons de canteen_id"
     assert tds[year]["canteen_id"].isna().sum() == 0, "Il y a des cantines sans identifiant"
-    assert len(tds[year]["canteen_id"]) == len(tds[year]["canteen_id"].unique()), "Il y a des doublons dans les cantines"
+    assert len(tds[year]["canteen_id"]) == len(
+        tds[year]["canteen_id"].unique()
+    ), "Il y a des doublons dans les cantines"
 ```
 
 # Traitement des valeurs manquantes
-Nous remplaçons les valeurs manquantes par la valeur 0.
+Si nous souhaitons coller au maximum au traitement effectué pour la campagne 2021, nous devons remplaçer les valeurs manquantes par la valeur 0.
 ```{python Basic}
 
 # for year in ['2021', '2022']:
 #     tds[year] = tds[year].fillna(0)
 ```
 
+# Qualité des données
+
+Avant d'étudier les chiffres clés de la télédéclaration, nous vous présentons des informations sur la qualité des données. Ces informations sont importantes pour saisir au mieux la portée des indicateurs.
+
+
+```{python Vérification du taux de présence de la donnée repas par an}
+# | echo: false
+# | output: asis
+
+print("::: {.spoiler} \n")
+pourcentage_in_file = {}
+for year in campagnes.keys():
+    pourcentage_in_file[year] = {}
+    for col in tds[year].columns:
+        pourcentage_in_file[year][col] = f"{100 * (1 - tds[year][col].isna().sum() / len(tds[year])):.2f} %"
+
+pourcentage_in_file_to_display = pd.DataFrame(pourcentage_in_file)
+print(pourcentage_in_file_to_display.to_markdown())
+print(":::")
+```
+
 # Chiffres clés
 
-Dans les télédéclarations pour la campagne 2022, il n'y a pas d'indication du nombre de satellites, du managment_type et du production_type.
+Dans les télédéclarations pour la campagne 2022 (données 2021), il n'y a pas d'indication du nombre de satellites, du managment_type et du production_type.
 
-Les informations suivantes proviennent donc des informations renseignées pour les cantines. Les données ont peut-être légérement été modifié depuis la télédéclaration.
+Ces informations suivantes proviennent donc des informations renseignées pour les cantines. Les données ont peut-être légérement été modifié depuis la télédéclaration.
 
 ```{python Nombre de sites de restauration concernés par la télédéclaration}
+# | echo: false
+# | output: asis
+
 indicateurs = {}
-for year in ['2021', '2022']:
+for year in campagnes.keys():
     indicateurs[year] = {}
     indicateurs[year]["Nombre de Télédéclarations"] = len(tds[year])
     indicateurs[year]["Nombre de sites de restauration concernés par la télédéclaration"] = (
@@ -201,42 +269,47 @@ for year in ['2021', '2022']:
     )
     indicateurs[year]["Nombre de repas totaux pour l'année"] = int(tds[year]["canteen.yearly_meal_count"].sum())
 
-    indicateurs[year]["Répartition du nombre de cantines en gestion directe"] = f"{100 * len(tds[year][tds[year]['canteen.management_type'] == 'direct']) / len(tds[year]):.2f} %"
+    indicateurs[year][
+        "Répartition du nombre de cantines en gestion directe"
+    ] = f"{100 * len(tds[year][tds[year]['canteen.management_type'] == 'direct']) / len(tds[year]):.2f} %"
     indicateurs[year][
         "Répartition du nombre de cantines en gestion concédée"
     ] = f"{100 * len(tds[year][tds[year]['canteen.management_type'] == 'conceded']) / len(tds[year]):.2f} %"
     indicateurs[year][
         "Répartition du nombre de cantines en gestion non renseignée"
     ] = f"{100 * len(tds[year][~tds[year]['canteen.management_type'].isin(['direct', 'conceded'])]) / len(tds[year]):.2f} %"
+
+    indicateurs[year][
+        "Montants d'achat alimentaires déclarés"
+    ] = f"{int(tds[year]['teledeclaration.value_total_ht'].sum())} €"
+
+    indicateurs[year][
+        "Taux global des achats en bio"
+    ] = f"{100 * tds[year]['teledeclaration.value_bio_ht'].sum() / tds[year]['teledeclaration.value_total_ht'].sum():.2f} %"
+
+    indicateurs[year][
+        "Taux global des achats EGALIM (bio inclus)"
+    ] = f"{100 * (tds[year]['teledeclaration.value_egalim_others_ht'].sum() + tds[year]['teledeclaration.value_externality_performance_ht'].sum() + tds[year]['teledeclaration.value_bio_ht'].sum()  + tds[year]['teledeclaration.value_sustainable_ht'].sum()) / tds[year]['teledeclaration.value_total_ht'].sum():.2f} %"
+
+    indicateurs[year]["Nombre de TD ayant déclaré 0€ d'achats en Bio"] = len(
+        tds[year][tds[year]["teledeclaration.value_bio_ht"] == 0]
+    )
+
+indicateurs_to_display = pd.DataFrame(indicateurs)
+print(indicateurs_to_display.to_markdown())
 ```
 
+# Focus par secteurs
+```{python}
 
-Pour les montants, nous nous rebasons sur les données de TD.
-
-```{python Montants d'achat alimentaires déclarés}
-
-indicateurs["Montants d'achat alimentaires déclarés"] = f"{int(td['teledeclaration.value_total_ht'].sum())} €"
-
-indicateurs[
-    "Taux global des achats en bio"
-] = f"{100 * td['teledeclaration.value_bio_ht'].sum() / td['teledeclaration.value_total_ht'].sum():.2f} %"
-
-indicateurs[
-    "Taux global des achats EGALIM (bio inclus)"
-] = f"{100 * (td['teledeclaration.value_egalim_others_ht'].sum() + td['teledeclaration.value_externality_performance_ht'].sum() + td['teledeclaration.value_bio_ht'].sum()  + td['teledeclaration.value_sustainable_ht'].sum()) / td['teledeclaration.value_total_ht'].sum():.2f} %"
-
-indicateurs['Nombre de TD ayant déclaré 0€ d\'achats en Bio'] = len(td[td['teledeclaration.value_bio_ht'] == 0])
-
-for i in indicateurs:
-    print(i, indicateurs[i])
 ```
 
+## Etudes des populations de déclarants
 
+```{python}
+# First we want a dataframe in which each line represent a canteen, whatever its production type (central, satellite...). In order to do this, we need to dig in the line of the central kitchen
+# for year in campagnes.keys():
 
-```{python Vérification du taux de présence de la donnée repas par an}
-print(
-    f"Le taux de présence de la donnée repas par an est de {100 * (1 - td['canteen.yearly_meal_count'].isna().sum() / len(td)):.2f} %"
-)
 ```
 
 
@@ -257,6 +330,7 @@ Si les 4 champs sont vides => on ne force pas à 0 (108 cantines concernés)
 
 * Normalement, champ "je ne sais pas"
 * Import par fichiers, il y a peut-être des champs vides, ou des valeurs à 0
+* Valeurs vides => on ne prend pas en compte la colonne pour les calculs
 
 
 # Changelog pour la campagne 2022
